fixed alignment issues on dashbaord and heroList page

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -38,6 +38,12 @@ a {
   align-self: auto;
 }
 
+app-hero-search {
+  display: block;
+  width: 300px;
+  margin: 50px auto;
+}
+
 @media (min-width: 600px) {
   a {
     width: 18%;
